# oxc-solid-js

./: AGENTS.md  Cargo.toml  README.md  index.js  package.json
.github/workflows/: CI.yml
crates/common/src/: options.rs
crates/dom/src/: conditional.rs  element.rs  ir.rs  output.rs  output_helpers.rs  template.rs  transform.rs  universal_element.rs
crates/solid-refresh/src/: transform_jsx.rs
crates/ssr/src/: element.rs
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: lib.rs
tests/: babel_fixture_runner.rs  transform_tests.rs
